--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&family=Ewert&display=swap">
     <link rel="stylesheet" href="main.css">
     <script defer src="main.js"></script>
 </head>
